--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
         "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^5.0.1",
         "core-js": "^3.0.0",
+        "file-loader": "^6.0.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.34.0",
         "sass-loader": "^11.1.1",
         "stimulus": "^2.0.0",
-        "webpack-notifier": "^1.6.0"
+        "webpack-notifier": "^1.6.0",
+        "yarn": "^1.22.10"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -21,6 +23,6 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "yarn": "^1.22.10"
+        "@popperjs/core": "^2.9.2"
     }
 }
