--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,7 @@ security:
         App\Entity\User:
             algorithm: auto
 
+    enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -15,7 +16,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            #anonymous: true
             lazy: true
             provider: app_user_provider
             guard:
@@ -31,9 +32,13 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/programs/new, roles: ROLE_CONTRIBUTOR }
+        - { path: ^/programs/[a-z-]+/edit, roles: ROLE_CONTRIBUTOR }
+    role_hierarchy:
+        ROLE_CONTRIBUTOR: ROLE_USER
+        ROLE_ADMIN: ROLE_CONTRIBUTOR
